# cppglob

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: FindStdFileSystem.cmake  cmake_uninstall.cmake  use_gold_linker.cmake
include/cppglob/: config.hpp  escape.hpp  fnmatch.hpp  glob.hpp  glob_iterator.hpp  iglob.hpp
src/: CMakeLists.txt  fnmatch.cpp  glob.cpp
src/pkgconfig/: cppglob.pc.in
test/: CMakeLists.txt  posix.cpp  posix.hpp  test.cpp  windows.cpp  windows.hpp
